--- a/test/fixtures/votes.yml
+++ b/test/fixtures/votes.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  title: MyString
+  user_id: 1
   value: 1
+  candidate_id: 1
 
 two:
-  title: MyString
+  user_id: 1
   value: 1
+  candidate_id: 1
